<resources>
    <string name="app_name">CRUD Alumno</string>
    <string name="title_activity_alumno_navigation">AlumnoNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">Listar Alumnos</string>
    <string name="menu_insert">Insertar Alumno</string>
    <string name="menu_delete">Borrar Alumno</string>
    <string name="menu_update">Modificar Alumno</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
