<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.ricardotg.alumnomovil.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_insert"
        android:name="com.ricardotg.alumnomovil.ui.insert.InsertFragment"
        android:label="@string/menu_insert"
        tools:layout="@layout/fragment_insert" />

    <fragment
        android:id="@+id/nav_delete"
        android:name="com.ricardotg.alumnomovil.ui.delete.DeleteFragment"
        android:label="@string/menu_delete"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.ricardotg.alumnomovil.ui.update.UpdateFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ricardotg.alumnomovil.ui.delete.DeleteFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ricardotg.alumnomovil.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>